--- a/templates/proyecto_e_detail.html
+++ b/templates/proyecto_e_detail.html
@@ -124,7 +124,7 @@
 
         <span class="hidden sm:inline-block sm:align-middle sm:h-screen" aria-hidden="true">&#8203;</span>
         <div class="modal-content inline-block align-bottom bg-white rounded-lg text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full">
-             <form id="#">
+             <form id="#" action="{% url 'proyectos_e:proyecto_e_detail' pk=proyecto.id %}" method="DELETE">
                 {% csrf_token %}
                 <div class="bg-white px-4 pt-5 pb-4 sm:p-6 sm:pb-4">
                     <div class="sm:flex sm:items-start">
