--- a/templates/proyectos_e.html
+++ b/templates/proyectos_e.html
@@ -34,8 +34,9 @@
     
             <span class="hidden sm:inline-block sm:align-middle sm:h-screen" aria-hidden="true">&#8203;</span>
             <div class="modal-content inline-block align-bottom bg-white rounded-lg text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full">
-                <form id="#"> 
-                    <div class="bg-white px-4 pt-5 pb-4 sm:p-6 sm:pb-4">
+                <form id="#" action="{% url 'proyectos_e:proyectos_e' %}" method="POST">
+                    {% csrf_token %} 
+                    <div class="bg-gray-100 px-4 pt-5 pb-4 sm:p-6 sm:pb-4">
                         <div class="sm:flex sm:items-start">
                             <div class="mt-3 text-center sm:mt-0 sm:ml-4 sm:text-left w-full">
                                 <h3 class="text-lg leading-6 font-medium text-gray-900" id="modal-title">
@@ -51,16 +52,28 @@
                                         <input type="text" name="title" id="modal-title-input" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" value="">
                                     </div>
                                     <div>
+                                        <label for="fiscal-year" class="block text-sm font-medium text-gray-700">Año Fiscal</label>
+                                        <input type="text" name="fiscal_year" id="modal-title-input" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" value="">
+                                    </div>
+                                    <div>
                                         <label for="fecha-entrada" class="block text-sm font-medium text-gray-700">Fecha de Entrada</label>
-                                        <input type="date" name="codigo" id="modal-codigo" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" value="">
+                                        <input type="date" name="fecha_entrada" id="modal-codigo" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" value="">
+                                    </div>
+                                    <div>
+                                        <label for="fecha-salida" class="block text-sm font-medium text-gray-700">Fecha de Entrada</label>
+                                        <input type="date" name="fecha_salida" id="modal-codigo" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" value="">
                                     </div>
                                     <div>
                                         <label for="seccion" class="block text-sm font-medium text-gray-700">Seccion</label>
-                                        <input type="text" name="codigo" id="modal-codigo" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" value="">
+                                        <select name="seccion" id="modal-estimador" class="mt-1 block w-full pl-3 pr-10 py-2 text-base border-gray-300 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm rounded-md">
+                                        {% for seccion in secciones %}
+                                        <option value={{seccion.name}} >{{seccion.name}}</option>
+                                        {% endfor %}
+                                        </select>
                                     </div>
                                     <div>
                                         <label for="coordinador" class="block text-sm font-medium text-gray-700">Coordinador</label>
-                                        <input type="text" name="codigo" id="modal-codigo" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" value="">
+                                        <input type="text" name="coordinador" id="modal-codigo" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" value="">
                                     </div>
                                     <div>
                                         <label for="estimador" class="block text-sm font-medium text-gray-700">Estimador(es)</label>
@@ -76,12 +89,20 @@
                                         <textarea name="comentarios" id="modal-comentarios" rows="3" class="mt-1 shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border border-gray-300 rounded-md"></textarea>
                                     </div>
                                     <div>
+                                        <label for="asignacion-presup" class="block text-sm font-medium text-gray-700">Asignacion Presupuestaria Conceptual</label>
+                                        <input type="text" name="asignacion_presup" id="modal-title-input" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" value="">
+                                    </div>
+                                    <div>
                                         <label for="status" class="block text-sm font-medium text-gray-700">Status</label>
                                         <select id="modal-status" name="status" class="mt-1 block w-full pl-3 pr-10 py-2 text-base border-gray-300 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm rounded-md">
-                                            <option>Draft</option>
-                                            <option selected>Pending Review</option>
-                                            <option>Approved</option>
-                                            <option>Rejected</option>
+                                            {% for estado in estados %}
+                                            {% if estado == "ACTIVO"%}
+                                            <option selected>{{estado}}</option>
+                                            {% else %}
+                                            <option>{{estado}}</option>
+                                            {% endif %}
+                                            {% endfor %}
+                                            
                                         </select>
                                     </div>
                                 </div>
@@ -89,7 +110,7 @@
                         </div>
                     </div>
                     <div class="bg-gray-50 px-4 py-3 sm:px-6 sm:flex sm:flex-row-reverse">
-                        <button type="submit" class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-indigo-600 text-base font-medium text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 sm:ml-3 sm:w-auto sm:text-sm">
+                        <button type="submit" class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-blue-600 text-base font-medium text-white hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 sm:ml-3 sm:w-auto sm:text-sm">
                             Aceptar
                         </button>
                         <button type="button" id="close-add-modal" class="mt-3 w-full inline-flex justify-center rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-white text-base font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm">
